# agent-postgres

./: .gitignore  AGENTS.md  ANTIGRAVITY.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  Security_Patch_Monitor_Implementation_Plan.md  TOOLS.md  build.rs  deny.toml  justfile  manual_todos.md  project.yml  read_only_server_doctor_implementation_plan.md  shellfisch_catchup.md  termiusCatchUp.md
.claude/: settings.json
.codex/: hooks.json
.github/: dependabot.yml
PgAgentApp/: AdvancedAuthenticationStore.swift  AdvancedAuthenticationView.swift  AppDelegate.swift  AuditLogSettingsView.swift  BridgeManager+Postgres.swift  BridgeManager+Tools.swift  BridgeManager.swift  CLAUDE.md  CommandPaletteView.swift  ConnectionEditView.swift  ConnectionStoreManager.swift  ContentView.swift  CrashReporter.swift  CredentialResolver.swift  FleetHubViews.swift  FleetMonitorHub.swift  ImportManager.swift  Info.plist  KeychainManager.swift  LayoutManager.swift  LocalPostgresDetector.swift  MidnightMacDesign.swift  NetworkPolishSettingsView.swift  PgAgent.entitlements  PgAgentApp.swift  PgAgentEventBus.swift  PgAgentEventCallback.swift  PgSchemaStore.swift  PostgresActivityMonitorView.swift  PostgresBackupRestoreView.swift  PostgresBrowserView.swift  PostgresBrowserWindow.swift  PostgresCellInspectorView.swift  PostgresColumnWidthStore.swift  PostgresConnectionEditView.swift  PostgresConnectionManager.swift  PostgresConnectionStatusStore.swift  PostgresERDModels.swift  PostgresERDView.swift  PostgresExplainVisualizerView.swift  (+60 more)
PgAgentMobile/: Info.plist  (+38 more)
(+189 files in other folders)
